--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section class="intro-section">
         <div class="intro-content">
             <div class="profile-pic-container">
-                <img src="/newport/WhatsApp Image 2024-10-09 at 14.04.03_65717ab7.jpg" alt="Profile Picture" class="profile-pic">
+                <img src="intro section images/ankitintro.jpg" alt="Profile Picture" class="profile-pic">
             </div>
             <h2 class="gradient-text">GURRAM ANKIT</h2>
             <p class="description">AI Enthusiast | Machine Learning | Electronics Engineer</p>
@@ -42,9 +42,14 @@
     </script>
 <section class="logos-section">
     <div class="logo-container">
-        <img src="/newport/image.png" alt="Workplace Logo">
-        <img src="/newport/channels4_profile.jpg" alt="College Logo">
-        <img src="/newport/images/infosys-springboard.avif" alt="Workplace Logo">
+        <img src="logos section img/R.png" alt="Workplace Logo">
+        <img src="logos section img/wfglobal.png" alt="College Logo">
+        <img src="logos section img/iare.png" alt="Workplace Logo">
+        <img src="logos section img/cisco.png" alt="Workplace Logo">
+        <img src="logos section img/infosys-springboard.avif" alt="Workplace Logo">
+        <img src="logos section img/sbtet.jpeg" alt="Workplace Logo">
+        <img src="logos section img/courseera.png" alt="Workplace Logo">
+    
     
         <!-- Add more logos as needed -->
     </div>
@@ -53,7 +58,7 @@
 <section class="about-section">
     <div class="about-content">
         <div class="about-img-container">
-            <img src="/newport/WhatsApp Image 2024-10-09 at 16.50.49_2760ca14.jpg" alt="About Me Picture" class="about-img">
+            <img src="about section img/ankit about img.jpg" alt="About Me Picture" class="about-img">
         </div>
         <div class="about-text">
             <h2>About Me</h2>
