--- a/index.html
+++ b/index.html
@@ -79,14 +79,14 @@
 <section class="social-media-section">
     <h2>Connect with Me</h2>
     <div class="social-icons">
-        <a href="https://linkedin.com" target="_blank">
-            <img src="linkedin-icon.png" alt="LinkedIn">
+        <a href="https://www.linkedin.com/in/ankit-gurram-787aaa254/" target="_blank">
+            <img src="connect with me img/linkedin.jpeg" alt="LinkedIn">
         </a>
-        <a href="https://github.com" target="_blank">
-            <img src="github-icon.png" alt="GitHub">
+        <a href="https://github.com/gurramankit" target="_blank">
+            <img src="connect with me img/git.jpeg" alt="GitHub">
         </a>
-        <a href="https://instagram.com" target="_blank">
-            <img src="instagram-icon.png" alt="Instagram">
+        <a href="https://www.instagram.com/ankit_gurram/" target="_blank">
+            <img src="connect with me img/insta.jpeg" alt="Instagram">
         </a>
     </div>
 </section>
@@ -114,21 +114,21 @@
     <div class="skills-container">
         <div class="skill-box">
             <div class="skill-icon">
-                <img src="/newport/python.jpeg" alt="Python">
+                <img src="my skills img/python.jpg" alt="Python">
             </div>
             <h3>Python</h3>
             <p>Experienced in building AI/ML models and automating processes using Python.</p>
         </div>
         <div class="skill-box">
             <div class="skill-icon">
-                <img src="/newport/Ml.jpeg" alt="Machine Learning">
+                <img src="my skills img/machine-learning.jpg" alt="Machine Learning">
             </div>
             <h3>Machine Learning</h3>
             <p>Developing and training machine learning models with real-world applications.</p>
         </div>
         <div class="skill-box">
             <div class="skill-icon">
-                <img src="/newport/web.png" alt="Web Development">
+                <img src="my skills img/development.png" alt="Web Development">
             </div>
             <h3>Web Development</h3>
             <p>Building responsive and dynamic websites using HTML, CSS, and JavaScript.</p>
@@ -144,10 +144,10 @@
 
         <!-- Project 1 -->
         <div class="project-box" onclick="togglePopup('project1')">
-            <img src="path/to/your/inditech_image.jpg" alt="INDITECH Project">
+            <img src="personal projects/inditech/INDITECH LOGO.png" alt="INDITECH Project">
             <h3>INDITECH</h3>
             <div class="tools">
-                <img src="path/to/your/tool1_icon.png" alt="Tool 1" class="tool-icon">
+                <img src="personal projects/tools/sensors.png" alt="Tool 1" class="tool-icon">
                 <img src="path/to/your/tool2_icon.png" alt="Tool 2" class="tool-icon">
             </div>
         </div>
