--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <div class="skills-container">
         <div class="skill-box">
             <div class="skill-icon">
-                <img src="my skills img/python.jpg" alt="Python">
+                <img src="my skills img/python.jpeg" alt="Python">
             </div>
             <h3>Python</h3>
             <p>Experienced in building AI/ML models and automating processes using Python.</p>
