--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <h3>INDITECH</h3>
             <div class="tools">
                 <img src="personal projects/tools/sensors.png" alt="Tool 1" class="tool-icon">
-                <img src="path/to/your/tool2_icon.png" alt="Tool 2" class="tool-icon">
+                <img src="personal projects/tools/arudino.webp" alt="Tool 2" class="tool-icon">
             </div>
         </div>
         <div class="popup" id="project1">
@@ -159,36 +159,36 @@
                 <p>Description of the INDITECH project goes here. It includes major features and technologies used.</p>
                 <p>Tools:</p>
                 <div class="tools">
-                    <img src="path/to/your/tool1_icon.png" alt="Tool 1" class="tool-icon">
-                    <img src="path/to/your/tool2_icon.png" alt="Tool 2" class="tool-icon">
+                    <img src="personal projects/tools/sensors.png" alt="Tool 1" class="tool-icon">
+                    <img src="personal projects/tools/arudino.webp" alt="Tool 2" class="tool-icon">
                 </div>
-                <a href="path/to/your/inditech.pdf" download>Download PDF</a>
-                <a href="https://github.com/yourusername/inditech" target="_blank">Visit GitHub</a>
+                <a href="personal projects/inditech/LPG AUTO PILOT @ INDITECH.pdf" download>Download PDF</a>
+                <a href="https://github.com/gurramankit/INDITECH" target="_blank">Visit GitHub</a>
             </div>
         </div>
 
         <!-- Project 2 -->
         <div class="project-box" onclick="togglePopup('project2')">
-            <img src="path/to/your/parking_image.jpg" alt="Parking Indicator Project">
+            <img src="personal projects/parking indicator/Parking indicator.png" alt="Parking Indicator Project">
             <h3>PARKING INDICATOR</h3>
             <div class="tools">
-                <img src="path/to/your/tool1_icon.png" alt="Tool 1" class="tool-icon">
-                <img src="path/to/your/tool2_icon.png" alt="Tool 2" class="tool-icon">
+                <img src="personal projects/tools/arudino.webp" alt="Tool 1" class="tool-icon">
+                <img src="personal projects/tools/sensors.png" alt="Tool 2" class="tool-icon">
             </div>
         </div>
         <div class="popup" id="project2">
             <div class="popup-content">
                 <span class="close" onclick="togglePopup('project2')">&times;</span>
                 <h3>PARKING INDICATOR</h3>
-                <img src="path/to/your/parking_image.jpg" alt="Parking Indicator Project">
+                <img src="personal projects/parking indicator/Parking indicator.png" alt="Parking Indicator Project">
                 <p>Description of the PARKING INDICATOR project goes here. It includes major features and technologies used.</p>
                 <p>Tools:</p>
                 <div class="tools">
-                    <img src="path/to/your/tool1_icon.png" alt="Tool 1" class="tool-icon">
-                    <img src="path/to/your/tool2_icon.png" alt="Tool 2" class="tool-icon">
+                    <img src="personal projects/tools/arudino.webp" alt="Tool 1" class="tool-icon">
+                    <img src="personal projects/tools/sensors.png" alt="Tool 2" class="tool-icon">
                 </div>
-                <a href="path/to/your/parking.pdf" download>Download PDF</a>
-                <a href="https://github.com/yourusername/parking-indicator" target="_blank">Visit GitHub</a>
+                <a href="personal projects/parking indicator/parking pbl project.pptx" download>Download PPTX</a>
+                <a href="https://github.com/gurramankit/PARKINGINDICATOR" target="_blank">Visit GitHub</a>
             </div>
         </div>
 
