--- a/index.html
+++ b/index.html
@@ -147,15 +147,15 @@
             <img src="personal projects/inditech/INDITECH LOGO.png" alt="INDITECH Project">
             <h3>INDITECH</h3>
             <div class="tools">
-                <img src="personal projects/tools/sensors.png" alt="Tool 1" class="tool-icon">
-                <img src="personal projects/tools/arudino.webp" alt="Tool 2" class="tool-icon">
+                <img src="---" alt="Tool 1" class="tool-icon">
+                <img src="---" alt="Tool 2" class="tool-icon">
             </div>
         </div>
         <div class="popup" id="project1">
             <div class="popup-content">
                 <span class="close" onclick="togglePopup('project1')">&times;</span>
                 <h3>INDITECH</h3>
-                <img src="path/to/your/inditech_image.jpg" alt="INDITECH Project">
+                <img src="personal projects/inditech/INDITECH LOGO.png" alt="INDITECH Project">
                 <p>Description of the INDITECH project goes here. It includes major features and technologies used.</p>
                 <p>Tools:</p>
                 <div class="tools">
@@ -184,8 +184,8 @@
                 <p>Description of the PARKING INDICATOR project goes here. It includes major features and technologies used.</p>
                 <p>Tools:</p>
                 <div class="tools">
-                    <img src="personal projects/tools/arudino.webp" alt="Tool 1" class="tool-icon">
-                    <img src="personal projects/tools/sensors.png" alt="Tool 2" class="tool-icon">
+                    <img src="---" alt="Tool 1" class="tool-icon">
+                    <img src="---" alt="Tool 2" class="tool-icon">
                 </div>
                 <a href="personal projects/parking indicator/parking pbl project.pptx" download>Download PPTX</a>
                 <a href="https://github.com/gurramankit/PARKINGINDICATOR" target="_blank">Visit GitHub</a>
@@ -194,7 +194,7 @@
 
         <!-- Project 3 -->
         <div class="project-box" onclick="togglePopup('project3')">
-            <img src="path/to/your/smart_health_watch_image.jpg" alt="Smart Health Watch Project">
+            <img src="personal projects/smart helth watch/smart health watch.jpg" alt="Smart Health Watch Project">
             <h3>SMART HEALTH WATCH</h3>
             <div class="tools">
                 <img src="path/to/your/tool1_icon.png" alt="Tool 1" class="tool-icon">
@@ -205,7 +205,7 @@
             <div class="popup-content">
                 <span class="close" onclick="togglePopup('project3')">&times;</span>
                 <h3>SMART HEALTH WATCH</h3>
-                <img src="path/to/your/smart_health_watch_image.jpg" alt="Smart Health Watch Project">
+                <img src="personal projects/smart helth watch/smart health watch.jpg" alt="Smart Health Watch Project">
                 <p>Description of the SMART HEALTH WATCH project goes here. It includes major features and technologies used.</p>
                 <p>Tools:</p>
                 <div class="tools">
@@ -219,7 +219,7 @@
 
         <!-- Project 4 -->
         <div class="project-box" onclick="togglePopup('project4')">
-            <img src="path/to/your/food_website_image.jpg" alt="Food Website Project">
+            <img src="personal projects/food website/main.png" alt="Food Website Project">
             <h3>FOOD WEBSITE</h3>
             <div class="tools">
                 <img src="path/to/your/tool1_icon.png" alt="Tool 1" class="tool-icon">
@@ -230,21 +230,21 @@
             <div class="popup-content">
                 <span class="close" onclick="togglePopup('project4')">&times;</span>
                 <h3>FOOD WEBSITE</h3>
-                <img src="path/to/your/food_website_image.jpg" alt="Food Website Project">
+                <img src="personal projects/food website/main.png" alt="Food Website Project">
                 <p>Description of the FOOD WEBSITE project goes here. It includes major features and technologies used.</p>
                 <p>Tools:</p>
                 <div class="tools">
                     <img src="path/to/your/tool1_icon.png" alt="Tool 1" class="tool-icon">
                     <img src="path/to/your/tool2_icon.png" alt="Tool 2" class="tool-icon">
                 </div>
-                <a href="path/to/your/food_website.pdf" download>Download PDF</a>
+                <a href="personal projects/food website/food website final review.pdf" download>Download PDF</a>
                 <a href="https://github.com/yourusername/food-website" target="_blank">Visit GitHub</a>
             </div>
         </div>
 
         <!-- Project 5 -->
         <div class="project-box" onclick="togglePopup('project5')">
-            <img src="path/to/your/multiband_patch_image.jpg" alt="Multiband Patch Project">
+            <img src="personal projects/multiband patch anteena/anteena main.png" alt="Multiband Patch Project">
             <h3>MULTIBAND PATCH</h3>
             <div class="tools">
                 <img src="path/to/your/tool1_icon.png" alt="Tool 1" class="tool-icon">
@@ -255,14 +255,14 @@
             <div class="popup-content">
                 <span class="close" onclick="togglePopup('project5')">&times;</span>
                 <h3>MULTIBAND PATCH</h3>
-                <img src="path/to/your/multiband_patch_image.jpg" alt="Multiband Patch Project">
+                <img src="personal projects/multiband patch anteena/anteena main.png" alt="Multiband Patch Project">
                 <p>Description of the MULTIBAND PATCH project goes here. It includes major features and technologies used.</p>
                 <p>Tools:</p>
                 <div class="tools">
                     <img src="path/to/your/tool1_icon.png" alt="Tool 1" class="tool-icon">
                     <img src="path/to/your/tool2_icon.png" alt="Tool 2" class="tool-icon">
                 </div>
-                <a href="path/to/your/multiband_patch.pdf" download>Download PDF</a>
+                <a href="personal projects/multiband patch anteena/Major 8th sem ANKIT.pdf" download>Download PDF</a>
                 <a href="https://github.com/yourusername/multiband-patch" target="_blank">Visit GitHub</a>
             </div>
         </div>
@@ -293,7 +293,7 @@ window.onclick = function(event) {
     <div class="timeline-container">
       <div class="timeline-item left">
         <div class="circle">
-          <img src="intellipaat-logo.png" alt="Intellipaat Logo" class="org-logo">
+          <img src="my journey/intellipaat.jpg" alt="Intellipaat Logo" class="org-logo">
         </div>
         <div class="timeline-content">
           <h3>Work at Intellipaat</h3>
@@ -304,7 +304,7 @@ window.onclick = function(event) {
   
       <div class="timeline-item right">
         <div class="circle">
-          <img src="btech-logo.png" alt="BTech Logo" class="org-logo">
+          <img src="my journey/iare.jpeg" alt="BTech Logo" class="org-logo">
         </div>
         <div class="timeline-content">
           <h3>B.Tech College</h3>
@@ -315,7 +315,7 @@ window.onclick = function(event) {
   
       <div class="timeline-item left">
         <div class="circle">
-          <img src="inter-logo.png" alt="Inter Logo" class="org-logo">
+          <img src="my journey/inter.png" alt="Inter Logo" class="org-logo">
         </div>
         <div class="timeline-content">
           <h3>Inter 2 Years</h3>
@@ -326,7 +326,7 @@ window.onclick = function(event) {
   
       <div class="timeline-item right">
         <div class="circle">
-          <img src="school-logo.png" alt="School Logo" class="org-logo">
+          <img src="my journey/school.png" alt="School Logo" class="org-logo">
         </div>
         <div class="timeline-content">
           <h3>School 6 to 10th Class</h3>
@@ -337,7 +337,7 @@ window.onclick = function(event) {
   
       <div class="timeline-item left">
         <div class="circle">
-          <img src="school-logo.png" alt="School Logo" class="org-logo">
+          <img src="my journey/surya.jpg" alt="School Logo" class="org-logo">
         </div>
         <div class="timeline-content">
           <h3>School 1 to 5th Class</h3>
@@ -354,27 +354,27 @@ window.onclick = function(event) {
     <div class="certifications-grid">
         <!-- Certification 1 -->
         <div class="certification-card">
-            <img src="path-to-image-1.png" alt="Crash Course on Python Certificate">
+            <img src="certifications img/courseeracertification.jpeg" alt="Crash Course on Python Certificate">
             <p>Crash Course on Python (Google, Coursera)<br>Jan 2023</p>
         </div>
         <!-- Certification 2 -->
         <div class="certification-card">
-            <img src="path-to-image-2.png" alt="Cyber Security Certificate">
+            <img src="certifications img/Introduction_to_Cybersecurity_Badge20241009-8-juvd7_page-0001.jpg" alt="Cyber Security Certificate">
             <p>Cyber Security (CISCO)<br>Feb 2023</p>
         </div>
         <!-- Certification 3 -->
         <div class="certification-card">
-            <img src="path-to-image-3.png" alt="Basic Python Certificate">
+            <img src="certifications img/hackerrank.png" alt="Basic Python Certificate">
             <p>Basic Python (Hackerank)<br>Mar 2023</p>
         </div>
         <!-- Certification 4 -->
         <div class="certification-card">
-            <img src="path-to-image-4.png" alt="Python Infosys Certificate">
+            <img src="certifications img/infosys.jpeg" alt="Python Infosys Certificate">
             <p>Python (INFOSYS, Springboard)<br>Nov 2022</p>
         </div>
         <!-- Certification 5 -->
         <div class="certification-card">
-            <img src="/newport/HACKATHON .jpeg" alt="Lowergrade Typewriter Certificate">
+            <img src="certifications img/greenfeild.jpeg" alt="Lowergrade Typewriter Certificate">
             <p>Lowergrade Typewriter (SBTET, Telangana)<br>Apr 2019</p>
         </div>
     </div>
