--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
                 <p>Description of the INDITECH project goes here. It includes major features and technologies used.</p>
                 <p>Tools:</p>
                 <div class="tools">
-                    <img src="personal projects/tools/sensors.png" alt="Tool 1" class="tool-icon">
-                    <img src="personal projects/tools/arudino.webp" alt="Tool 2" class="tool-icon">
+                    <img src="---" alt="Tool 1" class="tool-icon">
+                    <img src="---" alt="Tool 2" class="tool-icon">
                 </div>
                 <a href="personal projects/inditech/LPG AUTO PILOT @ INDITECH.pdf" download>Download PDF</a>
                 <a href="https://github.com/gurramankit/INDITECH" target="_blank">Visit GitHub</a>
