--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
             <img src="personal projects/parking indicator/Parking indicator.png" alt="Parking Indicator Project">
             <h3>PARKING INDICATOR</h3>
             <div class="tools">
-                <img src="personal projects/tools/arudino.webp" alt="Tool 1" class="tool-icon">
-                <img src="personal projects/tools/sensors.png" alt="Tool 2" class="tool-icon">
+                <img src="--" alt="Tool 1" class="tool-icon">
+                <img src="--" alt="Tool 2" class="tool-icon">
             </div>
         </div>
         <div class="popup" id="project2">
