--- a/index.html
+++ b/index.html
@@ -377,6 +377,16 @@ window.onclick = function(event) {
             <img src="certifications img/greenfeild.jpeg" alt="Lowergrade Typewriter Certificate">
             <p>Lowergrade Typewriter (SBTET, Telangana)<br>Apr 2019</p>
         </div>
+        <!-- Certification 6 -->
+        <div class="certification-card">
+            <img src="certifications img/greenfeild.jpeg" alt="Lowergrade Typewriter Certificate">
+            <p>Lowergrade Typewriter (SBTET, Telangana)<br>Apr 2019</p>
+        </div>
+        <!-- Certification 7 -->
+        <div class="certification-card">
+            <img src="certifications img/greenfeild.jpeg" alt="Lowergrade Typewriter Certificate">
+            <p>Lowergrade Typewriter (SBTET, Telangana)<br>Apr 2019</p>
+        </div>
     </div>
 </section>
 
