--- a/index.html
+++ b/index.html
@@ -379,13 +379,13 @@ window.onclick = function(event) {
         </div>
         <!-- Certification 6 -->
         <div class="certification-card">
-            <img src="certifications img/greenfeild.jpeg" alt="Lowergrade Typewriter Certificate">
-            <p>Lowergrade Typewriter (SBTET, Telangana)<br>Apr 2019</p>
+            <img src="participation/RV - India_for creating a Real Venture (1)_page-0001.jpg" alt="Lowergrade Typewriter Certificate">
+            <p>WFGLOBAL (inditech) (JHUB-JNTUH, Telangana)<br>Apr 2023</p>
         </div>
         <!-- Certification 7 -->
         <div class="certification-card">
-            <img src="certifications img/greenfeild.jpeg" alt="Lowergrade Typewriter Certificate">
-            <p>Lowergrade Typewriter (SBTET, Telangana)<br>Apr 2019</p>
+            <img src="participation/Lexicon.jpeg" alt="Lowergrade Typewriter Certificate">
+            <p>Lexicon 5.o IARE-Web Development (Hyd, Telangana)<br>May 2023</p>
         </div>
     </div>
 </section>
