--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@ window.onclick = function(event) {
   
       <div class="timeline-item left">
         <div class="circle">
-          <img src="my journey/inter.png" alt="Inter Logo" class="org-logo">
+          <img src="https://th.bing.com/th?q=Narayana+Group+Logo+White+PNG&w=120&h=120&c=1&rs=1&qlt=90&cb=1&dpr=1.6&pid=InlineBlock&mkt=en-IN&cc=IN&setlang=en&adlt=moderate&t=1&mw=247" alt="Inter Logo" class="org-logo">
         </div>
         <div class="timeline-content">
           <h3>Inter 2 Years</h3>
