--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         </div>
         <nav class="navbar">
             <ul>
-                <li><a href="#about">About</a></li>
+                <li><a href="#about-section">About</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#timeline">Timeline</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li><a href="#resume">Resume</a></li>
+                <li><a href="--">Resume</a></li>
             </ul>
         </nav>
     </header>
@@ -101,10 +101,10 @@
             <a href="#projects">Projects</a>
         </div>
         <div class="learn-more-box">
-            <a href="#experience">Work Experience</a>
+            <a href="#timeline">Work Experience</a>
         </div>
         <div class="learn-more-box">
-            <a href="#resume">Resume</a>
+            <a href="#certifications">Certifications</a>
         </div>
     </div>
 </section>
@@ -296,9 +296,10 @@ window.onclick = function(event) {
           <img src="my journey/intellipaat.jpg" alt="Intellipaat Logo" class="org-logo">
         </div>
         <div class="timeline-content">
-          <h3>Work at Intellipaat</h3>
-          <p>Year: 20ZZ - Present</p>
-          <p>Description about your role.</p>
+          <h3>Artificail Intelligence Trainee at Intellipaat</h3>
+          <p>Year: 2024 - Present</p>
+          <p>various aspects of AI, such as Machine Learning with Python, Deep Learning with TensorFlow, Artificial Neural
+Networks, Statistics, Data Science, Tableau Business Intelligence, Python and R programming.</p>
         </div>
       </div>
   
@@ -307,9 +308,9 @@ window.onclick = function(event) {
           <img src="my journey/iare.jpeg" alt="BTech Logo" class="org-logo">
         </div>
         <div class="timeline-content">
-          <h3>B.Tech College</h3>
-          <p>Year: 20YY - 20ZZ</p>
-          <p>Description about your experience.</p>
+          <h3>•Institute of Aeronautical Engineering</h3>
+          <p>Year: 2020 - 2024</p>
+          <p>Electronics and communication Engineering</p>
         </div>
       </div>
   
@@ -318,9 +319,9 @@ window.onclick = function(event) {
           <img src="https://th.bing.com/th?q=Narayana+Group+Logo+White+PNG&w=120&h=120&c=1&rs=1&qlt=90&cb=1&dpr=1.6&pid=InlineBlock&mkt=en-IN&cc=IN&setlang=en&adlt=moderate&t=1&mw=247" alt="Inter Logo" class="org-logo">
         </div>
         <div class="timeline-content">
-          <h3>Inter 2 Years</h3>
-          <p>Year: 20XX - 20YY</p>
-          <p>Description about your experience.</p>
+          <h3>•Narayana Junior College</h3>
+          <p>Year: 2018 - 2020</p>
+          <p>MPC,Board of Intermediate Education, Telangana</p>
         </div>
       </div>
   
@@ -329,9 +330,9 @@ window.onclick = function(event) {
           <img src="my journey/school.png" alt="School Logo" class="org-logo">
         </div>
         <div class="timeline-content">
-          <h3>School 6 to 10th Class</h3>
-          <p>Year: 200Y - 200Z</p>
-          <p>Description about your experience.</p>
+          <h3>Rainbow Public School</h3>
+          <p>Year: 2013 - 2018</p>
+          <p>Board of Secondary Education,Telangana.</p>
         </div>
       </div>
   
@@ -340,9 +341,9 @@ window.onclick = function(event) {
           <img src="my journey/surya.jpg" alt="School Logo" class="org-logo">
         </div>
         <div class="timeline-content">
-          <h3>School 1 to 5th Class</h3>
-          <p>Year: 200X - 200Y</p>
-          <p>Description about your experience.</p>
+          <h3>Surya Vidhya Nikethan school</h3>
+          <p>Year: 2009- 2013</p>
+          <p>Basic Education in School.</p>
         </div>
       </div>
     </div>
@@ -385,7 +386,7 @@ window.onclick = function(event) {
         <!-- Certification 7 -->
         <div class="certification-card">
             <img src="participation/Lexicon.jpeg" alt="Lowergrade Typewriter Certificate">
-            <p>Lexicon 5.o IARE-Web Development (Hyd, Telangana)<br>May 2023</p>
+            <p>Lexicon 5.0 IARE-Web Development (Hyd, Telangana)<br>May 2023</p>
         </div>
     </div>
 </section>
