--- a/index.html
+++ b/index.html
@@ -296,10 +296,9 @@ window.onclick = function(event) {
           <img src="my journey/intellipaat.jpg" alt="Intellipaat Logo" class="org-logo">
         </div>
         <div class="timeline-content">
-          <h3>Artificail Intelligence Trainee at Intellipaat</h3>
+          <h3>AI Trainee at Intellipaat</h3>
           <p>Year: 2024 - Present</p>
-          <p>various aspects of AI, such as Machine Learning with Python, Deep Learning with TensorFlow, Artificial Neural
-Networks, Statistics, Data Science, Tableau Business Intelligence, Python and R programming.</p>
+          <p>AI,Data Science,ML,Python</p>
         </div>
       </div>
   
