--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
     <header>
         <div class="header-left">
-            <h1>Gurram Ankit</h1>
+            <h1>GURRAM ANKIT Portfolio</h1>
         </div>
         <nav class="navbar">
             <ul>
-                <li><a href="#about-section">About</a></li>
+                <li><a href="#about-content">About</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#timeline">Timeline</a></li>
@@ -37,7 +37,7 @@
 
     <script>
         function scrollToSection() {
-            document.querySelector('#about').scrollIntoView({ behavior: 'smooth' });
+            document.querySelector('#about-section').scrollIntoView({ behavior: 'smooth' });
         }
     </script>
 <section class="logos-section">
@@ -155,7 +155,7 @@
             <div class="popup-content">
                 <span class="close" onclick="togglePopup('project1')">&times;</span>
                 <h3>INDITECH</h3>
-                <img src="personal projects/inditech/INDITECH LOGO.png" alt="INDITECH Project">
+                <img src="personal projects/inditech/WEB1.png" alt="INDITECH Project">
                 <p>Description of the INDITECH project goes here. It includes major features and technologies used.</p>
                 <p>Tools:</p>
                 <div class="tools">
@@ -230,7 +230,7 @@
             <div class="popup-content">
                 <span class="close" onclick="togglePopup('project4')">&times;</span>
                 <h3>FOOD WEBSITE</h3>
-                <img src="personal projects/food website/main.png" alt="Food Website Project">
+                <img src="personal projects/food website/1.png" alt="Food Website Project">
                 <p>Description of the FOOD WEBSITE project goes here. It includes major features and technologies used.</p>
                 <p>Tools:</p>
                 <div class="tools">
@@ -255,7 +255,7 @@
             <div class="popup-content">
                 <span class="close" onclick="togglePopup('project5')">&times;</span>
                 <h3>MULTIBAND PATCH</h3>
-                <img src="personal projects/multiband patch anteena/anteena main.png" alt="Multiband Patch Project">
+                <img src="personal projects/multiband patch anteena/3.png" alt="Multiband Patch Project">
                 <p>Description of the MULTIBAND PATCH project goes here. It includes major features and technologies used.</p>
                 <p>Tools:</p>
                 <div class="tools">
@@ -296,7 +296,7 @@ window.onclick = function(event) {
           <img src="my journey/intellipaat.jpg" alt="Intellipaat Logo" class="org-logo">
         </div>
         <div class="timeline-content">
-          <h3>AI Trainee at Intellipaat</h3>
+          <h3>AI Trainee</h3>
           <p>Year: 2024 - Present</p>
           <p>AI,Data Science,ML,Python</p>
         </div>
@@ -307,7 +307,7 @@ window.onclick = function(event) {
           <img src="my journey/iare.jpeg" alt="BTech Logo" class="org-logo">
         </div>
         <div class="timeline-content">
-          <h3>•Institute of Aeronautical Engineering</h3>
+          <h3>•I.A.R.E</h3>
           <p>Year: 2020 - 2024</p>
           <p>Electronics and communication Engineering</p>
         </div>
@@ -340,7 +340,7 @@ window.onclick = function(event) {
           <img src="my journey/surya.jpg" alt="School Logo" class="org-logo">
         </div>
         <div class="timeline-content">
-          <h3>Surya Vidhya Nikethan school</h3>
+          <h3>Surya Vidhya Nikethan</h3>
           <p>Year: 2009- 2013</p>
           <p>Basic Education in School.</p>
         </div>
