--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gurram Ankit Portfolio</title>
+    <title>Gurram Ankit PORTFOLIO</title>
     <link rel="stylesheet" href="new.css">
 </head>
 <body>
     <header>
         <div class="header-left">
-            <h1>GURRAM ANKIT Portfolio</h1>
+            <h1>GURRAM ANKIT PORTFOLIO</h1>
         </div>
         <nav class="navbar">
             <ul>
@@ -29,8 +29,8 @@
                 <img src="intro section images/ankitintro.jpg" alt="Profile Picture" class="profile-pic">
             </div>
             <h2 class="gradient-text">GURRAM ANKIT</h2>
-            <p class="description">AI Enthusiast | Machine Learning | Electronics Engineer</p>
-            <button class="portfolio-btn" onclick="scrollToSection()">Enter Portfolio</button>
+            <p class="description"><strong>AI Enthusiast </strong>| <strong>Machine Learning </strong>| <strong>Electronics Engineer</strong></p>
+            <button class="portfolio-btn" onclick="scrollToSection('#about-section')">Enter Portfolio</button>
         </div>
     </section>
     
