--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </div>
         <nav class="navbar">
             <ul>
-                <li><a href="#about-content">About</a></li>
+                <li><a href="#about">About</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#timeline">Timeline</a></li>
@@ -37,7 +37,7 @@
 
     <script>
         function scrollToSection() {
-            document.querySelector('#about-section').scrollIntoView({ behavior: 'smooth' });
+            document.querySelector('#about').scrollIntoView({ behavior: 'smooth' });
         }
     </script>
 <section class="logos-section">
@@ -55,12 +55,12 @@
     </div>
 </section>
 
-<section class="about-section">
+<section id="about" class="about-section">
     <div class="about-content">
         <div class="about-img-container">
             <img src="about section img/ankit about img.jpg" alt="About Me Picture" class="about-img">
         </div>
-        <div class="about-text">
+        <div  class="about-text">
             <h2>About Me</h2>
             <p>
                 I am <strong>Gurram Ankit</strong>, an AI enthusiast with a passion for <strong>Machine Learning</strong> and <strong>Electronics Engineering</strong>. My goal is to bring innovative solutions to real-world problems using advanced technologies.
