--- a/index.html
+++ b/index.html
@@ -156,11 +156,11 @@
                 <span class="close" onclick="togglePopup('project1')">&times;</span>
                 <h3>INDITECH</h3>
                 <img src="personal projects/inditech/WEB1.png" alt="INDITECH Project">
-                <p>Description of the INDITECH project goes here. It includes major features and technologies used.</p>
+                <p>Developed a system to prevent gas-related accidents, ensuring safety and reducing risks to life.</p>
                 <p>Tools:</p>
                 <div class="tools">
-                    <img src="---" alt="Tool 1" class="tool-icon">
-                    <img src="---" alt="Tool 2" class="tool-icon">
+                    <img src="---" alt="IoT" class="tool-icon">
+                    <img src="---" alt="Sensors" class="tool-icon">
                 </div>
                 <a href="personal projects/inditech/LPG AUTO PILOT @ INDITECH.pdf" download>Download PDF</a>
                 <a href="https://github.com/gurramankit/INDITECH" target="_blank">Visit GitHub</a>
@@ -181,11 +181,11 @@
                 <span class="close" onclick="togglePopup('project2')">&times;</span>
                 <h3>PARKING INDICATOR</h3>
                 <img src="personal projects/parking indicator/Parking indicator.png" alt="Parking Indicator Project">
-                <p>Description of the PARKING INDICATOR project goes here. It includes major features and technologies used.</p>
+                <p>Created a solution to help drivers easily locate available parking spaces in large car parks.</p>
                 <p>Tools:</p>
                 <div class="tools">
-                    <img src="---" alt="Tool 1" class="tool-icon">
-                    <img src="---" alt="Tool 2" class="tool-icon">
+                    <img src="---" alt="Aurdino" class="tool-icon">
+                    <img src="---" alt="Sensors" class="tool-icon">
                 </div>
                 <a href="personal projects/parking indicator/parking pbl project.pptx" download>Download PPTX</a>
                 <a href="https://github.com/gurramankit/PARKINGINDICATOR" target="_blank">Visit GitHub</a>
@@ -206,11 +206,11 @@
                 <span class="close" onclick="togglePopup('project3')">&times;</span>
                 <h3>SMART HEALTH WATCH</h3>
                 <img src="personal projects/smart helth watch/smart health watch.jpg" alt="Smart Health Watch Project">
-                <p>Description of the SMART HEALTH WATCH project goes here. It includes major features and technologies used.</p>
+                <p>Built a wearable device that monitors patient health and sends updates to doctors for timely intervention.</p>
                 <p>Tools:</p>
                 <div class="tools">
-                    <img src="path/to/your/tool1_icon.png" alt="Tool 1" class="tool-icon">
-                    <img src="path/to/your/tool2_icon.png" alt="Tool 2" class="tool-icon">
+                    <img src="path/to/your/tool1_icon.png" alt="Python" class="tool-icon">
+                    <img src="path/to/your/tool2_icon.png" alt="Raspberry Pi" class="tool-icon">
                 </div>
                 <a href="path/to/your/smart_health_watch.pdf" download>Download PDF</a>
                 <a href="https://github.com/yourusername/smart-health-watch" target="_blank">Visit GitHub</a>
@@ -231,7 +231,7 @@
                 <span class="close" onclick="togglePopup('project4')">&times;</span>
                 <h3>FOOD WEBSITE</h3>
                 <img src="personal projects/food website/1.png" alt="Food Website Project">
-                <p>Description of the FOOD WEBSITE project goes here. It includes major features and technologies used.</p>
+                <p>Designed a user-friendly platform for ordering meals, with an added feature for making food donations.</p>
                 <p>Tools:</p>
                 <div class="tools">
                     <img src="path/to/your/tool1_icon.png" alt="Tool 1" class="tool-icon">
@@ -256,7 +256,7 @@
                 <span class="close" onclick="togglePopup('project5')">&times;</span>
                 <h3>MULTIBAND PATCH</h3>
                 <img src="personal projects/multiband patch anteena/3.png" alt="Multiband Patch Project">
-                <p>Description of the MULTIBAND PATCH project goes here. It includes major features and technologies used.</p>
+                <p>Engineered a multiband antenna to operate across various frequency ranges using advanced patch designs.</p>
                 <p>Tools:</p>
                 <div class="tools">
                     <img src="path/to/your/tool1_icon.png" alt="Tool 1" class="tool-icon">
